--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "@vercel/analytics": "^0.1.11",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
