--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^4.12.0",
-    "@vercel/analytics": "^0.1.11",
+    "@prisma/client": "^4.13.0",
+    "@vercel/analytics": "^1.0.0",
     "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,22 +19,22 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.15.12",
     "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.34",
+    "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-config-next": "^13.3.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.12.0",
+    "prisma": "^4.13.0",
     "sharp": "^0.32.0",
     "tailwindcss": "^3.3.1",
-    "typescript": "^5.0.4"
+    "typescript": "5.1.0-beta"
   },
   "ct3aMetadata": {
     "initVersion": "7.7.0"
