--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^4.13.0",
-    "@vercel/analytics": "^1.0.0",
-    "next": "^13.3.0",
+    "@prisma/client": "^5.6.0",
+    "@vercel/analytics": "^1.1.1",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.37.0",
-    "@types/node": "^18.15.12",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-config-next": "^13.3.0",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.13.0",
-    "sharp": "^0.32.0",
-    "tailwindcss": "^3.3.1",
-    "typescript": "5.1.0-beta"
+    "@types/eslint": "^8.44.7",
+    "@types/node": "^20.9.1",
+    "@types/prettier": "^3.0.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^14.0.3",
+    "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "prisma": "^5.6.0",
+    "sharp": "^0.32.6",
+    "tailwindcss": "^3.3.5",
+    "typescript": "5.2.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.7.0"
